--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ex3)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES MatrixDriver.cpp Matrix.hpp)
+set(SOURCE_FILES MatrixDriver.cpp Matrix.hpp MatrixNotSquare.hpp)
 add_executable(ex3 ${SOURCE_FILES})
