--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 project(ex3)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lpthread")
 
 set(SOURCE_FILES MatrixDriver.cpp Matrix.hpp MatrixNotSquare.hpp DimensionZeroMatrix.hpp OutOfMatrixRange.hpp)
 add_executable(ex3 ${SOURCE_FILES})
